src/test/deca/syntax/invalid/SO/lex/chaine_invalide_slash.deca
// Description:
//    tests de programme incorrect lexicalement (chaine non terminee)
//
// Resultats:
//    ligne 10 : Erreur, token recognition error a cause du backslash
//
// Historique:
//    cree le 01/01/2022

"je ne peux pas utiliser des slash dans mes string \"
